fixed overflow and image padding

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -4,6 +4,11 @@ html {
 
 body {
 	font-family: 'Libre Baskerville', serif;
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
 }
 
 /* Navbar */
@@ -113,17 +118,17 @@ img {
 	color: black;
 }
 
-.project-section {
+/*.project-section {
 	text-align: center;
 }
 
 .project {
 	display: inline-block;
 	margin-left: 12.5%;
-}
+}*/
 
 .project img {
-	width: 100%;
+	object-fit: none;
 }
 
 h6 {
